--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/node": "^7.4.0",
     "@react-router/serve": "^7.4.0",
     "antd": "^5.24.4",
+    "firebase": "^11.6.0",
     "isbot": "^5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
